public/stylesheets/screen.css
/* ... */
#version_navi ul li.current {
    border-left: 1px solid #cacaca;
    position: relative;
    z-index: 100;}

#version_navi ul li a {
    display: block;
    padding: 1em 1em;
    line-height: 1;
    font-weight: bold;
    text-decoration: none;
    background: transparent url(../images/version_navi_div.png) no-repeat left bottom;}

#version_navi ul li.current a {
    border-right: 1px solid #cacaca;
    background:none;
    background-color: #fff;
    color: #f20089;
    height: 1.0833em;
    margin-right: -1px;}

#version_navi #report_filters {
    float: right;
}

a#csv_report_link {
    padding-left: 400px;}
/* @end */

/* @end */

/* @group Page components */

/* @group index pages */

#report_navigation,
#report_filtered_navigation {
    border-bottom: 1px solid #cacaca;
    border-left: 1px solid #cacaca;
    margin-bottom: 0;}

#report_navigation th,
th.filtered {
    font: bold 28px arial, sans-serif;
    background: url(../images/bt_shade.png) repeat-x right bottom;
    text-shadow: #fff 1px 1px 1px;
/*border-right: 1px solid #cacaca; */
    border-left: 1px solid #fff;
    border-bottom: 1px solid #cacaca;}

#report_navigation th a {
	text-shadow: #fff 1px 1px 1px;
	text-decoration:none;}

#report_navigation th:last-child,
th.filtered:last-child {
    background-position: left bottom;
    border-right: 1px solid #cacaca;}

#report_navigation th {
    padding-left: 15px;
    padding-top: 60px;
    padding-bottom: 41px;
    width:16.6666%;}

#report_navigation td {
    border-right: 1px solid #cacaca;
    border-left: none;
    padding-left: 10px;
    padding-top: 20px;
    vertical-align: top; }

#report_navigation ul {
    padding-left: 20px; }

#report_navigation a.name {
    font-weight: bold;
}

#report_navigation ul a.name {
    font-weight: normal;
}

th.filtered {
    padding-top: 30px;
    padding-bottom: 14px;
    border-top: 1px solid #cacaca;
    padding-left: 40px; }

td.filtered {
    padding-left: 40px;
    padding-top: 20px;
    border-right: 1px solid #cacaca; }

td.filtered ul {
    margin-bottom: 40px;
    list-style-type: none; }

td.filtered ul li {
    margin-bottom: 2px; }

td.filtered ul li span {
    color: #979797;
    font-family: arial;
    width: 4em;
    float: left; }

td.report_name {
    width: 33em;}

td.date {
    padding-left: 40px;
    width: 5em;}

.index_month_title {
    border-bottom: 1px solid #cacaca;}

.chart_actions.stack_chart {
/*margin-left: 25px;*/
    margin-bottom: 36px;}

.index_section {
	margin-left: -40px;
	margin-right: -10px;
	margin-bottom: 40px;
	padding-left: 40px;
	padding-right: 10px;
	padding-bottom: 40px;
	padding-top: 5px;
	border-top:1px solid #cacaca;
	border-bottom:1px solid #cacaca;}

.index_section h2 {
margin-top: 0;
	border-top: none;}

.index_section em {
	padding: 0 !important;
	font-style: italic;
}

h2 .compare {
	font-size: 0.6em;
	font-weight:normal;}
/* @end */


/* @group test_results */
.heading_actions {
    font-size: 14px;
    float: right;
    font-weight: normal;
    font-style: normal;
    position: relative; }

.heading_actions a {
    padding-right: 10px;
    background: url(../images/backtotop.png) no-repeat right; }

a.edit {
    color: #ed0089;
    font-weight: bold;
    text-decoration: none;
    background: url(../images/edit_icon.png) no-repeat right top;
    padding-right: 21px;
    position: absolute;
    right: 90px;
    padding-bottom: 4px; }

textarea.txt_edit {
    width: 550px;
    height: 150px;
    float:none;}

#test_result_overview {
    float: left;
    width: 780px; }

#test_result_overview .value {
    width: 40px;}

#test_result_overview .change {
    width: 60px;}

.editable_text {
    margin: 0 -5px -10px -5px;
    padding: 0 5px 10px 5px;
}

.editable_text:hover {
    background: #fff8de url(../images/edit_icon.png) no-repeat 86% 10px;
    cursor: pointer;}

#test_results_navi {
    margin-bottom: 10px; }

.go_to_next {
    float: right; }

.go_to_next:after {
    content:' \0BB'; }

.go_to_previous:before {
    content:'\0AB  '; }

td.inc em,
td.dec em,
td em {
    background-repeat: no-repeat;
    background-position: left 50%;
    padding-left: 23px;
    font-weight: normal;
    font-style: normal; }

td.inc em {
    background-image: url(../images/inc.png);
    white-space:nowrap; }

td.dec em {
    background-image: url(../images/dec.png);
    white-space:nowrap; }

.th_feature {
    width: 30%;}

.th_total,
.th_passed,
.th_failed,
.th_measured,
.th_not_testable{
    width:40px;
    text-align: center;}

.th_pass_rate{
  text-align: right;}

#test_results_by_feature .total,
#test_results_by_feature .pass,
#test_results_by_feature .fail,
#test_results_by_feature .na,
#test_results_by_feature .measured {
    text-align: center; }

#test_results_by_feature .rate {
  text-align: right;
}

.th_graph {
    width:25%;}

.th_notes {
    width: 25%;}

.th_grading {
	width: 30px;}

/* @group detailed results */

.th_to_target,
.th_target,
.th_measured,
.th_result,
.th_limit	{
	text-align: center;}

.th_to_target {
	width: 8%;}

.th_target {
	width: 7%;}

.th_name {
	width: 17%;
}

.th_measured {
	width:7%;}

.history .th_measured {
	width: 45%;
	text-align:left;}

.th_limit {
	width:7%;}

.th_build_testset {
        font-size: 12px;
        text-shadow: #fff 1px 1px 1px;
        background-color: #e0dfdf;
        table-layout:fixed;
        width: 10%;
        text-align: center;}

.th_build_result {
        font-size: 10px;
        table-layout:fixed;
        width: 10%;
        text-align: center;}

tr.compare_set {
        border-bottom-style: none;}

.th_history_result {
	text-align: center;}

.th_result {
	width: 5%;}

#th_result {
    width: 5%;
    text-align: center; }

#th_test_case,
#th_history_test_case {
    width: 50%; }

#th_build_test_case {
    border-bottom-style: none;}

#th_nft_test_case {
    width: 40%; }
/* ... */

